// This file copyright (c) 2011-2015, Quickstep Technologies LLC.
// Copyright (c) 2015, Pivotal Software, Inc.
// All rights reserved.
// See file CREDITS.txt for details.

syntax = "proto2";

package quickstep.serialization;

import "storage/StorageBlockLayout.proto";

enum InsertDestinationType {
  ALWAYS_CREATE_BLOCK = 0;
  BLOCK_POOL = 1;
  PARTITION_AWARE = 2;
}

message InsertDestination {
  required InsertDestinationType insert_destination_type = 1;
  required int32 relation_id = 2;

  // Note(zuyu): false for UpdateOperator, and otherwise true.
  required bool need_to_add_blocks_from_relation = 3;

  // Note(zuyu): the actual StorageBlockLayout for insertion, if set.
  optional StorageBlockLayoutDescription layout = 4;

  required uint64 relational_op_index = 5;
  required uint32 foreman_client_id = 6;
}
